--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,126 +1,135 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
-    tools:context="com.evento.akay18.evento.SignUpFragment">
+    android:layout_height="match_parent">
 
 
-    <android.support.design.widget.TextInputLayout
-        app:errorEnabled="true"
-        app:hintEnabled="false"
-        android:id="@+id/nameInputField"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:padding="8dp"
+        tools:context="com.evento.akay18.evento.SignUpFragment">
 
-        <EditText
-            android:id="@+id/nameField"
-            style="@style/edit_text"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/nameInputField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_person_black_24dp"
-            android:hint="Full Name"
-            android:maxLength="20"
-            android:singleLine="true" />
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            app:errorEnabled="true"
+            app:hintEnabled="false">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/nameField"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_person_black_24dp"
+                android:hint="Full Name"
+                android:maxLength="20"
+                android:singleLine="true" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/emailInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/nameInputField"
-        app:errorEnabled="true"
-        app:hintEnabled="false">
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/emailField"
-            style="@style/edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableEnd="@drawable/ic_email_black_24dp"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="textEmailAddress" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/pwdInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/emailInputLayout"
-        app:errorEnabled="true"
-        app:hintEnabled="false"
-        app:passwordToggleEnabled="true">
-
-        <EditText
-            android:id="@+id/pwdField"
-            style="@style/edit_text"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/emailInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/pwdInputLayout"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_below="@id/nameInputField"
+            app:errorEnabled="true"
+            app:hintEnabled="false">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/cnfPwdInputField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/pwdInputLayout"
-        app:errorEnabled="true"
-        app:hintEnabled="false"
-        app:passwordToggleEnabled="true">
+            <EditText
+                android:id="@+id/emailField"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableEnd="@drawable/ic_email_black_24dp"
+                android:ems="10"
+                android:hint="Email"
+                android:inputType="textEmailAddress" />
 
-        <EditText
-            android:id="@+id/cnfPwdField"
-            style="@style/edit_text"
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/pwdInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Confirm Password"
-            android:inputType="textPassword" />
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/emailInputLayout"
+            app:errorEnabled="true"
+            app:hintEnabled="false"
+            app:passwordToggleEnabled="true">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/pwdField"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/pwdInputLayout"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword" />
+        </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/mobInputField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cnfPwdInputField"
-        app:errorEnabled="true"
-        app:hintEnabled="false">
-
-        <EditText
-            android:id="@+id/mobField"
-            style="@style/edit_text"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/cnfPwdInputField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_phone_black_24dp"
-            android:hint="Mobile Number"
-            android:inputType="phone" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_below="@id/pwdInputLayout"
+            app:errorEnabled="true"
+            app:hintEnabled="false"
+            app:passwordToggleEnabled="true">
 
-    <Button
-        android:id="@+id/signUpBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/mobInputField"
-        android:background="@drawable/style_signup"
-        android:shadowColor="#000"
-        android:text="SIGN UP"
-        android:textAllCaps="true"
-        android:textColor="#fff"
-        android:textSize="14sp" />
+            <EditText
+                android:id="@+id/cnfPwdField"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Confirm Password"
+                android:inputType="textPassword" />
 
-</RelativeLayout>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/mobInputField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/cnfPwdInputField"
+            app:errorEnabled="true"
+            app:hintEnabled="false">
+
+            <EditText
+                android:id="@+id/mobField"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_phone_black_24dp"
+                android:hint="Mobile Number"
+                android:inputType="phone" />
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/signUpBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_below="@id/mobInputField"
+            android:background="@drawable/style_signup"
+            android:shadowColor="#000"
+            android:text="SIGN UP"
+            android:textAllCaps="true"
+            android:textColor="#fff"
+            android:textSize="14sp" />
+
+
+    </RelativeLayout>
+
+</ScrollView>
